@@ -1,3 +1,9 @@
+bubba-frontend (2.3~rc4) vincent hugo; urgency=low
+
+  * Set default selected in backup wizard
+
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 12 Jul 2011 15:15:32 +0200
+
 bubba-frontend (2.3~rc2) vincent hugo; urgency=low
 
   * Cleanup indentation and formating, no logic change
